syntax = "proto3";

option go_package = "github.com/GoArm/proto/GoArm;GoArm";

package GoArm;

service Arm {
    rpc SetNum(In) returns (Empty) {}
    rpc GetNum(Empty) returns (Out) {}
}

message In {
    int32 id = 1;
    int32 number = 2;
}

message Out {
    int32 number = 1;
}

message Empty {}
